Seção notícias criada (primeira versão).

--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -17,7 +17,7 @@ title: Observatório UFJ Covid-19
 
 					{% include sobre.html %}
 					{% include graficos.html %}
-					<!--{% include noticias.html %}-->
+					{% include noticias.html %}
 					{% include equipe.html %}
 
 				</article>
