Criação de páginas isoladas para cada seção.

--- a/jekyll/_pages/noticias.html
+++ b/jekyll/_pages/noticias.html
@@ -1,3 +1,9 @@
+---
+title: Observatório UFJ Covid-19 - Notícias
+permalink: /noticias
+layout: pagina
+---
+
 <header class="special container" id="noticias">
 	<span class="icon solid fa-newspaper"></span>
 	<h2>Notícias</h2>
