--- a/jekyll/_pages/graficos/index.html
+++ b/jekyll/_pages/graficos/index.html
@@ -1,5 +1,5 @@
 ---
-title: Observatório UFJ Covid-19 - Gráficos
+title: Observatório UFJ Covid-19 - Projeções
 permalink: /graficos
 layout: pagina
 ---
@@ -11,7 +11,7 @@ layout: pagina
 
 			<!--<object data="images/mapa-jatai.svg" type="image/svg+xml" id="mapa-jatai" alt="Mapa da Cidade de Jataí" width= "160%" style="margin-left: -30%; margin-top: 30%;"></object>-->
 
-			<img src="images/mapa-jatai.svg" id="mapa-jatai" alt="Mapa da Cidade de Jataí"  style="width: 160%; margin-left: -30%; margin-top: 30%;" />
+			<img src="{{ site.baseurl }}/images/mapa-jatai.svg" id="mapa-jatai" alt="Mapa da Cidade de Jataí"  style="width: 160%; margin-left: -30%; margin-top: 30%;" />
 		</div>
 
 		<div class="col-7 col-12-narrower" style="margin-left: 5%">
@@ -41,7 +41,7 @@ layout: pagina
 
 		<div class="col-4 col-10-narrower off-1-narrower imp-narrower col-8-mobile off-2-mobile">
 
-			<img class="image img-fit" src="images/mapa-mineiros.svg" alt="Mapa da Cidade de Mineiros" style="width: 160%; margin-left: -30%; margin-top: 30%;"/>
+			<img class="image img-fit" src="{{ site.baseurl }}/images/mapa-mineiros.svg" alt="Mapa da Cidade de Mineiros" style="width: 160%; margin-left: -30%; margin-top: 30%;"/>
 
 		</div>
 		<div class="col-7 col-12-narrower" style="margin-left: 5%">
@@ -62,7 +62,7 @@ layout: pagina
 	</div>
 	<div class="row gtr-50">
 		<span>
-					Dados atualizados em 30 de março de 2020.<br>
+					Dados atualizados em 31 de março de 2020.<br>
 					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="http://mineiros.go.gov.br/covid-19.php" target="_blank">
 						Secretária de Saúde de Mineiros
 						</a>.
