Inclusão de dois novos gráficos em cada cidade.

--- a/jekyll/_pages/graficos/index.html
+++ b/jekyll/_pages/graficos/index.html
@@ -24,7 +24,7 @@ layout: pagina
 				min-width: 300px; 
 				max-width: 110%;
 				max-height: 90%;" 
-				id="jatai-grafico"></div>
+				id="jatai-grafico-resumo"></div>
 		</div>
 	</div>
 	<div class="row gtr-50">
