--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -6,7 +6,7 @@ layout: pagina
 ---
 
 <!-- One -->
-<section class="wrapper style2 container special-alt" id="grafico-jatai">
+<section class="wrapper style2 container special-alt">
 	<div class="row gtr-50">
 		<div class="col-4 col-10-narrower off-1-narrower imp-narrower col-8-mobile off-2-mobile">
 
@@ -18,18 +18,18 @@ layout: pagina
 		<div class="col-7 col-12-narrower" style="margin-left: 5%">
 
 			<header>
-				<h2>Covid-19: <strong>Jataí (GO)</strong></h2>
+				<h2>Resumo: <strong>Jataí (GO)</strong></h2>
 			</header>
 			<div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
 				min-width: 300px; 
 				max-width: 110%;
 				max-height: 90%;" 
-				id="jatai-grafico"></div>
+				id="jatai-grafico-resumo"></div>
 		</div>
 	</div>
 	<div class="row gtr-50">
 		<span>
-					Dados atualizados em 30 de março de 2020.<br>
+					Dados atualizados em 31 de março de 2020.<br>
 					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://www.jatai.go.gov.br/" target="_blank">
 						Secretária de Saúde de Jataí
 						</a>.
@@ -37,28 +37,29 @@ layout: pagina
 	</div>
 </section>
 
-<!--<section class="wrapper style2 container special-alt" id="grafico-jatai">
+<section class="wrapper style2 container special-alt">
 	<div class="row gtr-50">
-		<div class="col-6 col-12-narrower">
+		<div class="col-6 col-10-narrower off-1-narrower imp-narrower col-10-mobile">
 			<header>
 				<h2>Todas as categorias</strong></h2>
 			</header>
-			<div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
+			<div class="col-1-mobile" style="height: 80%; width: 100%; 
+				min-height: 300px;
 				min-width: 300px; 
 				max-width: 110%;
 				max-height: 90%;" 
 				id="jatai-grafico-todas"></div>
 		</div>
-		<div class="col-6 col-12-narrower">
+		<div class="col-6 col-10-narrower off-1-narrower imp-narrower col-10-mobile">
 
 			<header>
 				<h2>Monitorados</strong></h2>
 			</header>
-			<div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
+			<div class="col-1-mobile" style="height: 80%; width: 100%; min-height: 300px;
 				min-width: 300px; 
 				max-width: 110%;
 				max-height: 90%;" 
 				id="jatai-grafico-monitorados"></div>
 		</div>
 	</div>
-</section> -->
+</section>
