Modularização da seção de scripts.
Closes #5

--- a/jekyll/_pages/graficos/index.html
+++ b/jekyll/_pages/graficos/index.html
@@ -1,7 +1,8 @@
 ---
-title: Observatório UFJ Covid-19 - Projeções
+title: Observatório UFJ Covid-19 - Gráficos
 permalink: /graficos
 grupo: graficos
+script: graficos-geral
 layout: pagina
 ---
 
