--- a/jekyll/_pages/noticias.html
+++ b/jekyll/_pages/noticias.html
@@ -2,6 +2,7 @@
 title: Observatório UFJ Covid-19 - Notícias
 permalink: /noticias
 layout: pagina
+script: noticias
 ---
 
 <header class="special container" id="noticias">
