--- a/jekyll/_pages/sobre.html
+++ b/jekyll/_pages/sobre.html
@@ -2,6 +2,7 @@
 title: Observatório UFJ Covid-19 - Sobre
 permalink: /sobre
 layout: pagina
+script: geral
 ---
 <header class="special container">
 	<span class="icon solid fa-chart-bar"></span>
