Automatização do dia de atualização.
Close #6

--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -30,7 +30,7 @@ layout: pagina
 	</div>
 	<div class="row gtr-50">
 		<span>
-					Dados atualizados em 31 de março de 2020.<br>
+					Dados atualizados em <span id="data-atualizacao-jatai">30 de março de 2020</span>.<br>
 					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://www.jatai.go.gov.br/" target="_blank">
 						Secretária de Saúde de Jataí
 						</a>.
