Atualização da Equipe.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -7,7 +7,7 @@ layout: pagina
 
 <!-- Two -->
 <header class="special container" id="equipe">
-<span class="icon solid fa-chart-bar"></span>
+<span class="icon solid fa-users"></span>
 <h2><strong>Equipe</strong> do Observatório</h2>
 </header>
 
@@ -17,20 +17,22 @@ layout: pagina
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
-				nome 	= 	"Prof. Esdras L. Bispo Jr."
-				short 	= 	"esdras"
-				lattes	= 	"http://lattes.cnpq.br/1022072289836952"
-				content	= "Idealizador do Observatório. Pesquisador na área de Educação e Inteligência Artificial"
+				nome 		= 	"Prof. Esdras L. Bispo Jr."
+				short 		= 	"esdras"
+				url			=	"http://lattes.cnpq.br/1022072289836952"
+				plataforma	= 	"Lattes"
+				content		= "Idealizador do Observatório. Pesquisador na área de Educação e Inteligência Artificial"
 			%}
 
 		</div>
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
-				nome 	= 	"Profa. Joslaine Jeske"
-				short 	= 	"joslaine"
-				lattes	= 	"http://lattes.cnpq.br/2394348610492496"
-				content	= "Responsável pelos dados da cidade de Rio Verde. Pesquisadora na área de Inteligência Artificial."
+				nome 		= 	"Profa. Joslaine Jeske"
+				short 		= 	"joslaine"
+				url			=	"http://lattes.cnpq.br/2394348610492496"
+				plataforma	= 	"Lattes"
+				content		= "Responsável pelos dados da cidade de Rio Verde. Pesquisadora na área de Inteligência Artificial."
 			%}
 
 		</div>
@@ -38,10 +40,11 @@ layout: pagina
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
-				nome 	= 	"Profa. Franciny Medeiros"
-				short 	= 	"franciny"
-				lattes	= 	"http://lattes.cnpq.br/2821748091466181"
-				content	= 	"Responsável pelos dados da cidade de Jataí e pela comunicação. Pesquisadora na área de Engenharia de Software."
+				nome 		= 	"Profa. Franciny Medeiros"
+				short 		= 	"franciny"
+				url			=	"http://lattes.cnpq.br/2821748091466181"
+				plataforma	= 	"Lattes"
+				content		= 	"Responsável pelos dados da cidade de Jataí e pela comunicação. Pesquisadora na área de Engenharia de Software."
 			%}
 
 		</div>
@@ -50,10 +53,11 @@ layout: pagina
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
-				nome 	= 	"Prof. Márcio Lopes"
-				short 	= 	"marcio"
-				lattes	= 	"http://lattes.cnpq.br/8846703586256426"
-				content	= 	"Responsável pelos dados da cidade de Mineiros. Pesquisador na área de Computação em Névoa."
+				nome 		= 	"Prof. Márcio Lopes"
+				short 		= 	"marcio"
+				url			=	"http://lattes.cnpq.br/8846703586256426"
+				plataforma	= 	"Lattes"
+				content		= 	"Responsável pelos dados da cidade de Mineiros. Pesquisador na área de Computação em Névoa."
 			%}
 
 		</div>
@@ -61,10 +65,11 @@ layout: pagina
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
-				nome 	= 	"Prof. Marcelo Freitas"
-				short 	= 	"marcelo"
-				lattes	= 	"http://lattes.cnpq.br/0972390630476077"
-				content	= 	"Responsável pelas notícias dos avanços científicos em relação ao Covid-19. Pesquisa sobre Sistemas Operacionais."
+				nome 		= 	"Prof. Marcelo Freitas"
+				short 		= 	"marcelo"
+				url			=	"http://lattes.cnpq.br/0972390630476077"
+				plataforma	= 	"Lattes"
+				content		= 	"Responsável pelas notícias dos avanços científicos em relação ao Covid-19. Pesquisa sobre Sistemas Operacionais."
 			%}
 
 		</div>
@@ -72,10 +77,58 @@ layout: pagina
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
-				nome 	= 	"Prof. Zaqueu Souza"
-				short 	= 	"zaqueu"
-				lattes	= 	"http://lattes.cnpq.br/8132493439297747"
-				content	= 	"esponsável pelos dados da cidade de Mineiros. Professor de Engenharia Ambiental e Sanitária na Unifimes."
+				nome 		= 	"Prof. Zaqueu Souza"
+				short 		= 	"zaqueu"
+				url			=	"http://lattes.cnpq.br/8132493439297747"
+				plataforma	= 	"Lattes"
+				content		= 	"Responsável pelos dados da cidade de Mineiros. Professor de Engenharia Ambiental e Sanitária na Unifimes."
+			%}
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Diego Barbosa"
+				short 		= 	"diego"
+				url			=	"https://www.linkedin.com/in/diegocostacmp/"
+				plataforma	= 	"LinkedIn"
+				content		= 	"Colaborador no desenvolvimento da página. Analista de Sistemas na Unimed na cidade de Rio Verde."
+			%}
+
+		</div>
+
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Felipe Nedopetalski"
+				short 		= 	"felipe"
+				url			=	"https://www.linkedin.com/in/felipe-nedopetalski-91b93b154/"
+				plataforma	= 	"LinkedIn"
+				content		= 	"Colaborador no desenvolvimento da página. Graduando em Ciências da Computação na Universidade Federal de Jataí (UFJ)."
+			%}
+
+		</div>
+	</div>
+</section>
+
+<header class="special container">
+<span class="icon solid fa-hankshake"></span>
+<h2><strong>Parceiros</strong> do Observatório</h2>
+</header>
+
+<section class="wrapper style1 container special">							
+
+	<div class="row">
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"#TodosContraoCorona"
+				short 		= 	"todoscontraocorona"
+				url			=	"https://www.facebook.com/centrouniversitariodemineiros"
+				plataforma	= 	"Facebook"
+				content		= "Projeto de conscientização diária em relação ao combate ao Covid-19 promovido pelo Centro Universitário de Mineiros (Unifimes)."
 			%}
 
 		</div>
