Correção do ícone.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -114,7 +114,7 @@ layout: pagina
 </section>
 
 <header class="special container">
-<span class="icon solid fa-hankshake"></span>
+<span class="icon solid fa-handshake"></span>
 <h2><strong>Parceiros</strong> do Observatório</h2>
 </header>
 
