Inclusão dos dados de Mineiros.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -94,7 +94,7 @@ layout: pagina
 				short 		= 	"diego"
 				url			=	"https://www.linkedin.com/in/diegocostacmp/"
 				plataforma	= 	"LinkedIn"
-				content		= 	"Colaborador no desenvolvimento da página. Analista de Sistemas na Unimed na cidade de Rio Verde."
+				content		= 	"Colaborador no desenvolvimento da página. Analista Programador na Unimed na cidade de Rio Verde."
 			%}
 
 		</div>
