Correção do título da página de Rio Verde.

--- a/jekyll/_pages/graficos/rio-verde.html
+++ b/jekyll/_pages/graficos/rio-verde.html
@@ -1,5 +1,5 @@
 ---
-title: Observatório UFJ Covid-19 - Projeções (Jataí)
+title: Observatório UFJ Covid-19 - Projeções (Rio Verde)
 permalink: /graficos/rio-verde/
 grupo: graficos
 script: graficos-rioverde
