--- a/jekyll/_pages/noticias.html
+++ b/jekyll/_pages/noticias.html
@@ -6,28 +6,16 @@ script: noticias
 ---
 
 <header class="special container" id="noticias">
-	<span class="icon solid fa-newspaper"></span>
-	<h2>Notícias</h2>
+	<span class="icon solid fa-newspaper"></span>	
+	<h2>- Notícias</h2>
 </header>
 
 <section class="wrapper style1 container special">
 	<div class="row">
-		<div class="col-4 col-12-narrower">
 
-			<section id="noticia01" class="noticia">
-				<a href="http://www.google.com" target="_blank">
-					<span class="icon solid featured"></span>
-					<header>
-						<h3>Also Something</h3>
-					</header>
-					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-				</a>
-			</section>	
-		
-		</div>
+		{% for i in (1..61) %}
 		<div class="col-4 col-12-narrower">
-
-			<section id="noticia02" class="noticia">
+			<section id="noticia0{{ i }}"  class="noticia">
 				<a href="http://www.google.com" target="_blank">
 					<span class="icon solid featured"></span>
 					<header>
@@ -36,20 +24,8 @@ script: noticias
 					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 				</a>
 			</section>
-
 		</div>
-		<div class="col-4 col-12-narrower">
+		{% endfor %}
 
-			<section id="noticia03" class="noticia">
-				<a href="http://www.google.com" target="_blank">
-					<span class="icon solid featured"></span>
-					<header>
-						<h3>Also Something</h3>
-					</header>
-					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-				</a>
-			</section>
-
-		</div>
-	</div>
+			</div>
 </section>
