Inclusão de Gabriel Santos na equipe.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -110,6 +110,18 @@ layout: pagina
 			%}
 
 		</div>
+
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Gabriel Santos"
+				short 		= 	"gabriel"
+				url			=	"https://www.linkedin.com/in/dev-gabriel-santos/"
+				plataforma	= 	"LinkedIn"
+				content		= 	"Colaborador no desenvolvimento da página. Graduando em Ciências da Computação na Universidade Federal de Jataí (UFJ)."
+			%}
+
+		</div>
 	</div>
 </section>
 
