--- a/jekyll/_pages/noticias.html
+++ b/jekyll/_pages/noticias.html
@@ -7,7 +7,7 @@ script: noticias
 
 <header class="special container" id="noticias">
 	<span class="icon solid fa-newspaper"></span>	
-	<h2>- Notícias</h2>
+	<h2>Notícias</h2>
 </header>
 
 <section class="wrapper style1 container special">
