Inclusão da Profa. Edlaine como membro.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -87,6 +87,19 @@ layout: pagina
 		</div>
 	</div>
 	<div class="row">
+
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Profa. Edlaine Vilela"
+				short 		= 	"edlaine"
+				url			=	"http://lattes.cnpq.br/8767578610764666"
+				plataforma	= 	"Lattes"
+				content		= 	"Consultora do observatório sobre questões de aspectos epidemiológicos. Professora de Medicina na UFJ."
+			%}
+
+		</div>
+	
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
@@ -110,7 +123,9 @@ layout: pagina
 			%}
 
 		</div>
-
+	</div>
+	<div class="row">
+		
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
