Correção dos dados e foto da Profa. Edlaine.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -95,7 +95,7 @@ layout: pagina
 				short 		= 	"edlaine"
 				url			=	"http://lattes.cnpq.br/8767578610764666"
 				plataforma	= 	"Lattes"
-				content		= 	"Consultora do observatório sobre questões de aspectos epidemiológicos. Professora de Medicina na UFJ."
+				content		= 	"Consultora sobre questões epidemiológicas. Professora de Medicina na UFJ."
 			%}
 
 		</div>
