Inclusão do Covid-Goiás como parceiro.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -159,5 +159,17 @@ layout: pagina
 			%}
 
 		</div>
+
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Covid Goiás"
+				short 		= 	"covid-goias"
+				url			=	"https://covidgoias.ufg.br/"
+				plataforma	= 	"Link"
+				content		= "Observatório digital conduzido pelo LAPIG-UFG com dados sobre o Covid-19 em relação ao estado de Goiás."
+			%}
+
+		</div>
 	</div>
 </section>
