Inclusão dos dados do Prof. Manuel.

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -99,6 +99,18 @@ layout: pagina
 			%}
 
 		</div>
+
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Prof. Manuel Ferreira"
+				short 		= 	"manuel"
+				url			=	"http://lattes.cnpq.br/4498594723433539"
+				plataforma	= 	"Lattes"
+				content		= 	"Colaborador-parceiro do Covid-Goiás. Professora da área de Geoprocessamento na UFG."
+			%}
+
+		</div>
 	
 		<div class="col-4 col-12-narrower">
 
