--- a/jekyll/_pages/teste.html
+++ b/jekyll/_pages/teste.html
@@ -8,10 +8,7 @@ layout: pagina
 
 <!-- One -->
 <section class="wrapper style2 container special-alt" id="grafico-jatai">
-	<div class="row gtr-50" style="margin: 0 0 0 0; margin-top: -7.5%; margin-left: -7.5%; padding: 0 0 0 0 ; border: 0 0 0 0; text-align: center;">
-		
-		<div class="col-2">
-		</div>
+	<div class="row gtr-50 justify-content-center" style="margin: 0 0 0 0; margin-top: -7.5%;">
 
 			{% include card-estatistica.html 
 				categoria	=	"Monitorados"
@@ -80,89 +77,6 @@ layout: pagina
 					Dados atualizados em <span id="data-atualizacao-jatai">30 de março de 2020</span>.<br>
 					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://www.jatai.go.gov.br/" target="_blank">
 						Secretária de Saúde de Jataí
-						</a>.
-				</span>
-	</div>
-</section>
-
-<section class="wrapper style2 container special-alt" id="grafico-mineiros">
-	<div class="row gtr-50" style="margin: 0 0 0 0; margin-top: -7.5%; margin-left: -7.5%; padding: 0 0 0 0 ; border: 0 0 0 0; text-align: center;">
-		
-		<div class="col-2">
-		</div>
-
-			{% include card-estatistica.html 
-				categoria	=	"Monitorados"
-				numero 		= 	"117"
-				cor			= 	"brown"
-			%}
-
-			{% include card-estatistica.html 
-				categoria	=	"Notificados"
-				numero 		= 	"3"
-				cor			= 	"green"
-			%}
-
-			{% include card-estatistica.html 
-				categoria	=	"Excluídos"
-				numero 		= 	"3"
-				cor			= 	"orange"
-			%}
-
-			{% include card-estatistica.html 
-				categoria	=	"Confirmados"
-				numero 		= 	"0"
-				cor			= 	"red"
-			%}
-
-			{% include card-estatistica.html 
-				categoria	=	"Descartados"
-				numero 		= 	"0"
-				cor			= 	"pink"
-			%}
-
-			{% include card-estatistica.html 
-				categoria	=	"Óbitos"
-				numero 		= 	"0"
-				cor			= 	"gray"
-			%}
-
-			{% include card-estatistica.html 
-				categoria	=	"Recuperados"
-				numero 		= 	"0"
-				cor			= 	"purple"
-			%}
-
-			
-	</div>
-	<div class="row gtr-50">
-
-		<div class="col-4 col-10-narrower off-1-narrower imp-narrower col-8-mobile off-2-mobile">
-
-			<img class="image img-fit" src="{{ site.baseurl }}/assets/images/mapa-mineiros.svg" alt="Mapa da Cidade de Mineiros" style="width: 160%; margin-left: -30%; margin-top: 30%;"/>
-
-		</div>
-		<div class="col-7 col-12-narrower" style="margin-left: 5%">
-
-			<header>
-				<h2></h2>
-			</header>
-			<div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
-				min-width: 300px; 
-				max-width: 110%;
-				max-height: 90%;" 
-				id="mineiros-grafico-resumo"></div>
-			
-				
-			
-		</div>
-		
-	</div>
-	<div class="row gtr-50">
-		<span>
-					Dados atualizados em <span id="data-atualizacao-mineiros">30 de março de 2020</span>.<br>
-					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="http://mineiros.go.gov.br/covid-19.php" target="_blank">
-						Secretária de Saúde de Mineiros
 						</a>.
 				</span>
 	</div>
