Mudança da página para o Bootstrap

--- a/jekyll/_pages/noticias.html
+++ b/jekyll/_pages/noticias.html
@@ -8,14 +8,24 @@ script: noticias
 <header class="special container" id="noticias">
 	<span class="icon solid fa-newspaper"></span>	
 	<h2>Notícias</h2>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	
 </header>
 
-<section class="wrapper style1 container special">
-	<div class="row">
 
-		{% for i in (1..61) %}
-		<div class="col-4 col-12-narrower">
-			<section id="noticia0{{ i }}"  class="noticia">
+<div id="carousel" class="carousel slide" data-ride="carousel">
+	<ol class="carousel-indicators">
+	  <li data-target="#carousel" data-slide-to="0" class="active"></li>
+	  <li data-target="#carousel" data-slide-to="1"></li>
+	  <li data-target="#carousel" data-slide-to="2"></li>
+	</ol>
+	<div class="carousel-inner">
+	  <div class="carousel-item active">
+		<section class="wrapper style1 container special">
+			<section id="noticia01"  class="noticia">
 				<a href="http://www.google.com" target="_blank">
 					<span class="icon solid featured"></span>
 					<header>
@@ -24,8 +34,73 @@ script: noticias
 					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 				</a>
 			</section>
+		</section>
+	  </div>
+	  <div class="carousel-item">
+		<section class="wrapper style1 container special">
+			<section id="noticia02"  class="noticia">
+				<a href="http://www.google.com" target="_blank">
+					<span class="icon solid featured"></span>
+					<header>
+						<h3>Also Something</h3>
+					</header>
+					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+				</a>
+			</section>
+		</section>	  
+	</div>
+	  <div class="carousel-item">
+		<section class="wrapper style1 container special">
+			<section id="noticia03"  class="noticia">
+				<a href="http://www.google.com" target="_blank">
+					<span class="icon solid featured"></span>
+					<header>
+						<h3>Also Something</h3>
+					</header>
+					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+				</a>
+			</section>
+		</section>	  
 		</div>
-		{% endfor %}
+	</div>
+	<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	  <span class="sr-only">Anterior</span>
+	</a>
+	<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	  <span class="sr-only">Próximo</span>
+	</a>
+</div>
 
-			</div>
-</section>
+<div class="container">
+	<ul class="list-unstyled">
+		{% for i in (4..11) %}
+		<li id="noticia0{{ i }}" class="media">
+			<a href="http://www.google.com" target="_blank">
+				<span class="align-self-center icon solid featured"></span>
+				<div class="media-body">
+					<header>
+						<h3>Also Something</h3>
+					</header>
+				</a>
+					<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+				</div>
+		</li>
+		{% endfor %}
+	  </ul>
+
+	  <div class="text-center">
+		<button id="mostrarMais" type="button" class="btn btn-link">Mostrar mais..</button>
+	  </div>
+
+</div>
+
+<script>
+	document.getElementById("MostrarMais").onclick = function() {mostrarNoticias()};
+
+	function mostrarNoticias(){
+		// criar pagina com todas as noticias
+	}
+
+</script>
