Botão todas notícicas

--- a/jekyll/_pages/noticias.html
+++ b/jekyll/_pages/noticias.html
@@ -90,8 +90,8 @@ script: noticias
 		{% endfor %}
 	  </ul>
 
-	  <div class="text-center">
-		<button id="mostrarMais" type="button" class="btn btn-link">Mostrar mais..</button>
+	  <div class="text-right">
+		<button id="mostrarMais" type="button" class="btn btn-link">Todas as notícias >></button>
 	  </div>
 
 </div>
