Criação da página Tendências

--- a/jekyll/_pages/tendencias.html
+++ b/jekyll/_pages/tendencias.html
@@ -9,18 +9,21 @@ layout: pagina
 <!-- One -->
 <section class="wrapper style2 container special-alt">
 	<div class="row gtr-50">
+
+		<header>
+			<h2>Tendência dos Confirmados: <strong>Jataí (GO)</strong></h2>
+		</header>
+
 		<div class="col-4 col-10-narrower off-1-narrower imp-narrower col-8-mobile off-2-mobile">
 
 			<!--<object data="images/mapa-jatai.svg" type="image/svg+xml" id="mapa-jatai" alt="Mapa da Cidade de Jataí" width= "160%" style="margin-left: -30%; margin-top: 30%;"></object>-->
 
-			<img src="{{ site.baseurl }}/assets/images/mapa-jatai.svg" id="mapa-jatai" alt="Mapa da Cidade de Jataí"  style="width: 160%; margin-left: -30%; margin-top: 30%;" />
+			<img src="{{ site.baseurl }}/assets/images/mapa-jatai.svg" id="mapa-jatai" alt="Mapa da Cidade de Jataí"  style="width: 160%; margin-left: -30%; margin-top: 10%;" />
 		</div>
 
 		<div class="col-7 col-12-narrower" style="margin-left: 5%">
 
-			<header>
-				<h2>Tendência dos Confirmados: <strong>Jataí (GO)</strong></h2>
-			</header>
+			
 			<div class="col-1-mobile" style="height: 90%; width: 110%; min-height: 300px;
 				min-width: 300px; 
 				max-width: 110%;
@@ -30,10 +33,10 @@ layout: pagina
 	</div>
 	<div class="row gtr-50">
 		<span>
-					Dados atualizados em <span id="data-atualizacao-jatai">30 de março de 2020</span>.<br>
-					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://www.jatai.go.gov.br/" target="_blank">
-						Secretária de Saúde de Jataí
-						</a>.
+					Projeção realizada em <span id="data-atualizacao-jatai">30 de março de 2020</span>.<br>
+					<strong>Fonte: Prof. Luiz Balmann</strong> (Modelagem e Análises Espaciais do <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://covidgoias.ufg.br/" target="_blank">
+						Covid-Goias
+						</a>).
 				</span>
 	</div>
 </section>
@@ -64,10 +67,10 @@ layout: pagina
 	</div>
 	<div class="row gtr-50">
 		<span>
-					Dados atualizados em <span id="data-atualizacao-rioverde">30 de março de 2020</span>.<br>
-					<strong>Fonte:</strong> <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://www.rioverde.go.gov.br/covid19/" target="_blank">
-						Secretária de Saúde de Rio Verde
-						</a>.
+					Projeção realizada em <span id="data-atualizacao-rioverde">30 de março de 2020</span>.<br>
+					<strong>Fonte: Prof. Luiz Balmann</strong> (Modelagem e Análises Espaciais do <a style="background-color: rgba(255, 255, 255, 0.5);" href="https://covidgoias.ufg.br/" target="_blank">
+						Covid-Goias
+						</a>).
 				</span>
 	</div>
 </section>
