Correção dos links.

--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -7,7 +7,7 @@ layout: pagina
 ---
 
 {% include grafico-completo.html 
-	cidade 		= 	"Jataí."
+	cidade 		= 	"Jataí"
 	nome-base	= 	"jatai"
 	url-fonte	=	"https://www.jatai.go.gov.br/"
 	nome-fonte	= 	"Secretária de Saúde de Jataí"
