Adaptação e criação de várias páginas.

--- a/jekyll/_pages/colabore.html
+++ b/jekyll/_pages/colabore.html
@@ -1,29 +1,27 @@
 ---
 title: Observatório UFJ Covid-19 - Colabore
 permalink: /colabore
-script: geral
 layout: pagina
+script: geral
+grupo: geral
+navbar: sobre
 ---
+<div class="container pt-4 px-5 pb-4 geral-bg">
+	<h1 class="pb-4">Disposto em ajudar de alguma forma?</h1>
 
-<!-- CTA -->
-<section id="cta">
+	<p class="lead">
+		Junte-se a nós! Conheça as formas como você pode colaborar com o Observatório. Se você é da área de Computação, conheça o <a href="https://github.com/bispojr/observatorio-ufj-covid19" target="_blank">nosso repositório no GitHub</a>. Se você é um gestor, envie um email para nós (<strong>bispojr@ufg.br</strong>) informando as suas necessidades reais de informação. 
+	</p>
+	<p class="lead text-center">
+		Quem sabe nós não podemos ajudá-lo?
+	</p>
+	<div class="container text-center">
+		<a class="btn btn-primary" href="https://github.com/bispojr/observatorio-ufj-covid19" target="_blank">
+			<span class="fab fa-github pr-1"></span> GitHub Repo
+		</a>
+		<a class="btn btn-primary" href="mailto:bispojr@ufg.br?subject=Observatório%20UFJ%20Covid-19">
+			<span class="fas fa-envelope pr-1"></span> bispojr@ufg.br
+		</a>
+	</div>
 
-	<header style="background-color: rgba(0, 0, 0, 0.5); width: 80%; margin-left: 10%;">
-		<h2>Disposto em ajudar de <strong>alguma forma</strong>?</h2>
-		<p style="width: 80%; margin-left: 10%;">
-			Junte-se a nós! Conheça as formas como você pode colaborar com o Observatório. Se você é da área de Computação, conheça o <a href="https://github.com/bispojr/observatorio-ufj-covid19" target="_blank">nosso repositório no GitHub</a>. Se você é um gestor, envie um email para nós (<strong>bispojr@ufg.br</strong>) informando as suas necessidades reais de informação. 
-			<br>Quem sabe nós não podemos ajudá-lo?
-		</p>
-	</header>
-	<footer>
-		<ul class="buttons">
-			<li>
-				<a href="https://github.com/bispojr/observatorio-ufj-covid19" class="button primary" target="_blank">
-					GitHub Repo
-				</a>
-			</li>
-			<li><a href="mailto:bispojr@ufg.br?subject=Observatório%20UFJ%20Covid-19" class="button">bispojr@ufg.br</a></li>
-		</ul>
-	</footer>
-
-</section>
+</div>
