--- a/jekyll/_pages/creditos.html
+++ b/jekyll/_pages/creditos.html
@@ -4,6 +4,7 @@ permalink: /creditos
 layout: pagina
 script: geral
 grupo: geral
+navbar: sobre
 ---
 <div class="container pt-4 pl-5 pb-4 geral-bg">
 	<h1>Créditos</h1>
