--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -2,6 +2,7 @@
 title: Observatório UFJ Covid-19 - Projeções (Jataí)
 permalink: /graficos/jatai/
 grupo: graficos
+navbar: graficos
 script: graficos-jatai
 layout: pagina
 ---
