--- a/jekyll/_pages/graficos/mineiros.html
+++ b/jekyll/_pages/graficos/mineiros.html
@@ -2,6 +2,7 @@
 title: Observatório UFJ Covid-19 - Gráficos (Mineiros)
 permalink: /graficos/mineiros
 grupo: graficos
+navbar: graficos
 script: graficos-mineiros
 layout: pagina
 ---
