--- a/jekyll/_pages/graficos/rio-verde.html
+++ b/jekyll/_pages/graficos/rio-verde.html
@@ -2,6 +2,7 @@
 title: Observatório UFJ Covid-19 - Projeções (Rio Verde)
 permalink: /graficos/rio-verde/
 grupo: graficos
+navbar: graficos
 script: graficos-rioverde
 layout: pagina
 ---
