--- a/jekyll/_pages/tendencias/jatai.html
+++ b/jekyll/_pages/tendencias/jatai.html
@@ -2,6 +2,7 @@
 title: Observatório UFJ Covid-19 - Tendências (Jataí)
 permalink: /tendencias/jatai/
 grupo: tendencias
+navbar: tendencias
 script: tendencias-jatai
 layout: pagina
 ---
