--- a/jekyll/_pages/sobre.html
+++ b/jekyll/_pages/sobre.html
@@ -3,11 +3,18 @@ title: Observatório UFJ Covid-19 - Sobre
 permalink: /sobre
 layout: pagina
 script: geral
+grupo: geral
+navbar: sobre
 ---
-<header class="special container">
-	<span class="icon solid fa-chart-bar"></span>
-	<h2>Sobre o <strong>observatório UFJ Covid-19</strong></h2>
-	<p style="width: 60%; margin-left: 20%;">
+<div class="container pt-4 px-5 pb-4 geral-bg">
+	<h1 class="pb-4">Sobre o Observatório UFJ Covid-19</h1>
+
+	<p class="lead">
 		O Observatório UFJ Covid-19 tem como propósito de ser uma ferramenta de 
-		<strong>acompanhamento dos dados oficiais epidemiológicos</strong> em relação à pandemia do Covid-19 para a cidade de Jataí e Mineiros (e potencialmente toda a região do sudoeste goiano). Esta é uma iniciativa do <a href="https://computacao.jatai.ufg.br/" target="_blank">Bacharelado em Ciências da Computação</a> da <a href="https://portalufj.jatai.ufg.br/" target="_blank">Universidade Federal de Jataí</a> (UFJ). Nosso público-alvo é a comunidade em geral. Entretanto, estamos fortemente interessados em fornecer informações importantes (como gráficos e projeções) para <strong>auxiliar gestores públicos e privados na tomada de decisões</strong> neste momento delicado vivido em nossa sociedade. </p>
-</header>
+		<strong>acompanhamento dos dados oficiais epidemiológicos</strong> em relação à pandemia do Covid-19 para a cidade de Jataí, Mineiros e Rio Verde (e potencialmente toda a região do sudoeste goiano). Esta é uma iniciativa do <a href="https://computacao.jatai.ufg.br/" target="_blank">Bacharelado em Ciências da Computação</a> da <a href="https://portalufj.jatai.ufg.br/" target="_blank">Universidade Federal de Jataí</a> (UFJ). 
+	</p>
+
+	<p class="lead">
+		Nosso público-alvo é a comunidade em geral. Entretanto, estamos fortemente interessados em fornecer informações importantes (como gráficos e projeções) para <strong>auxiliar gestores públicos e privados na tomada de decisões</strong> neste momento delicado vivido em nossa sociedade. 
+	</p>
+</div>
