Inclusão do Prof. Luiz (SENAI)

--- a/jekyll/_pages/equipe.html
+++ b/jekyll/_pages/equipe.html
@@ -111,7 +111,21 @@ layout: pagina
 			%}
 
 		</div>
-	
+
+		<div class="col-4 col-12-narrower">
+
+			{% include membro-equipe.html 
+				nome 		= 	"Prof. Luiz Pascoal"
+				short 		= 	"luiz"
+				url			=	"http://lattes.cnpq.br/9189310566441445"
+				plataforma	= 	"Lattes"
+				content		= 	"Colaborador-parceiro do Covid-Goiás. Professor da área de Sistemas Distribuídos no SENAI."
+			%}
+
+		</div>
+	</div>
+	<div class="row">
+
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
@@ -123,8 +137,7 @@ layout: pagina
 			%}
 
 		</div>
-	</div>
-	<div class="row">
+
 		<div class="col-4 col-12-narrower">
 
 			{% include membro-equipe.html 
