Adaptando algumas páginas para liberar a versão.

--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -6,7 +6,7 @@ navbar: graficos
 script: graficos-jatai
 layout: pagina
 ---
-<div class="wrapper style2 container-fluid special-alt">
+<!--<div class="wrapper style2 container-fluid special-alt">
 	<div class="row">
 		{% include card-estatistica.html 
 			categoria	=	"Monitorados"
@@ -50,7 +50,7 @@ layout: pagina
 			cor			= 	"red"
 		%}
 	</div>
-</div>
+</div>-->
 {% include grafico-completo.html 
 	cidade 		= 	"Jataí"
 	nome-base	= 	"jatai"
