--- a/jekyll/_pages/na-midia.html
+++ b/jekyll/_pages/na-midia.html
@@ -15,6 +15,13 @@ navbar: sobre
 
     <div class="list-group">
         <a class="list-group-item list-group-item-action" 
+        href="https://www.facebook.com/centrouniversitariodemineiros/videos/540776539966212/" target="_blank">
+        <h3>
+            <span class="badge badge-primary">#TodosContraoCorona</span> - 17/04/2020
+        </h3>
+        Programa 18 realizado pela Unifimes apresentando o Observatório UFJ Covid-19.
+        </a>
+        <a class="list-group-item list-group-item-action" 
         href="https://www.opopular.com.br/noticias/cidades/universidades-de-goi%C3%A1s-colocam-estrutura-e-conhecimento-na-luta-contra-o-coronav%C3%ADrus-1.2033181" target="_blank">
         <h3>
             <span class="badge badge-primary">Jornal O Popular</span> - 10/04/2020
