Criação dos cards estáticos para cada cidade.

--- a/jekyll/_pages/graficos/mineiros.html
+++ b/jekyll/_pages/graficos/mineiros.html
@@ -7,6 +7,15 @@ script: graficos-mineiros
 layout: pagina
 ---
 
+{% include card-cidade.html 
+	cidade 		= 	"Mineiros"
+	data		= 	"18 de abril"
+	conf-num	=	"0"
+	rec-num		= 	"0"
+	int-num		=	"0"
+	obt-num		=	"0"
+%}
+
 {% include grafico-completo.html 
 	cidade 		= 	"Mineiros"
 	nome-base	= 	"mineiros"
