--- a/jekyll/_pages/graficos/rio-verde.html
+++ b/jekyll/_pages/graficos/rio-verde.html
@@ -7,6 +7,15 @@ script: graficos-rioverde
 layout: pagina
 ---
 
+{% include card-cidade.html 
+	cidade 		= 	"Rio Verde"
+	data		= 	"18 de abril"
+	conf-num	=	"13"
+	rec-num		= 	"8"
+	int-num		=	"2"
+	obt-num		=	"1"
+%}
+
 {% include grafico-completo.html 
 	cidade 		= 	"Rio Verde"
 	nome-base	= 	"rioverde"
