--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -6,51 +6,16 @@ navbar: graficos
 script: graficos-jatai
 layout: pagina
 ---
-<!--<div class="wrapper style2 container-fluid special-alt">
-	<div class="row">
-		{% include card-estatistica.html 
-			categoria	=	"Monitorados"
-			numero 		= 	"108"
-			cor			= 	"brown"
-		%}
 
-		{% include card-estatistica.html 
-			categoria	=	"Notificados"
-			numero 		= 	"16"
-			cor			= 	"green"
-		%}
+{% include card-cidade.html 
+	cidade 		= 	"Jataí"
+	data		= 	"17 de abril"
+	conf-num	=	"6"
+	rec-num		= 	"6"
+	int-num		=	"0"
+	obt-num		=	"0"
+%}
 
-		{% include card-estatistica.html 
-			categoria	=	"Descartados"
-			numero 		= 	"8"
-			cor			= 	"pink"
-		%}
-
-		{% include card-estatistica.html 
-			categoria	=	"Isolados"
-			numero 		= 	"6"
-			cor			= 	"black"
-		%}
-
-		{% include card-estatistica.html 
-			categoria	=	"Investigados"
-			numero 		= 	"5"
-			cor			= 	"gold"
-		%}
-
-		{% include card-estatistica.html 
-			categoria	=	"Internados"
-			numero 		= 	"4"
-			cor			= 	"blue"
-		%}
-
-		{% include card-estatistica.html 
-			categoria	=	"Confirmados"
-			numero 		= 	"2"
-			cor			= 	"red"
-		%}
-	</div>
-</div>-->
 {% include grafico-completo.html 
 	cidade 		= 	"Jataí"
 	nome-base	= 	"jatai"
