--- a/jekyll/_pages/graficos/mineiros.html
+++ b/jekyll/_pages/graficos/mineiros.html
@@ -9,8 +9,8 @@ layout: pagina
 
 {% include card-cidade.html 
 	cidade 		= 	"Mineiros"
-	data		= 	"30 de abril"
-	conf-num	=	"4"
+	data		= 	"01 de maio"
+	conf-num	=	"5"
 	rec-num		= 	"0"
 	int-num		=	"1"
 	obt-num		=	"0"
