--- a/jekyll/_pages/graficos/jatai.html
+++ b/jekyll/_pages/graficos/jatai.html
@@ -9,8 +9,8 @@ layout: pagina
 
 {% include card-cidade.html 
 	cidade 		= 	"Jataí"
-	data		= 	"30 de abril"
-	conf-num	=	"9"
+	data		= 	"02 de maio"
+	conf-num	=	"20"
 	rec-num		= 	"6"
 	int-num		=	"1"
 	obt-num		=	"0"
