--- a/jekyll/_pages/graficos/rio-verde.html
+++ b/jekyll/_pages/graficos/rio-verde.html
@@ -9,7 +9,7 @@ layout: pagina
 
 {% include card-cidade.html 
 	cidade 		= 	"Rio Verde"
-	data		= 	"30 de abril"
+	data		= 	"04 de maio"
 	conf-num	=	"19"
 	rec-num		= 	"12"
 	int-num		=	"0"
